crates/store/re_log_encoding/tests/snapshots/footer_roundtrip__rrd_manifest_recording_schema.snap
---
source: crates/store/re_log_encoding/tests/footer_roundtrip.rs
expression: schema_to_comparable_string(&rrd_manifest_recording_sequential.data.schema())
---
chunk_byte_len: u64
chunk_byte_offset: u64
chunk_entity_path: Utf8 [
    rerun:kind:control
]
chunk_id: FixedSizeBinary[16] [
    rerun:kind:control
]
chunk_is_static: bool [
    rerun:kind:control
]
chunk_partition_id: Utf8 [
    rerun:kind:control
]
frame_nr:end: i64 [
    rerun:index:frame_nr
    rerun:index_kind:sequence
    rerun:index_marker:end
]
frame_nr:example_MyPoints:colors:end: i64 [
    rerun:archetype:example.MyPoints
    rerun:component:example.MyPoints:colors
    rerun:component_descriptor:example.MyPoints:colors
    rerun:component_type:example.MyColor
    rerun:index:frame_nr
    rerun:index_kind:sequence
    rerun:index_marker:end
]
frame_nr:example_MyPoints:colors:has_data: bool [
    rerun:archetype:example.MyPoints
    rerun:component:example.MyPoints:colors
    rerun:component_descriptor:example.MyPoints:colors
    rerun:component_type:example.MyColor
    rerun:index:frame_nr
    rerun:index_kind:sequence
    rerun:index_marker:has_data
]
frame_nr:example_MyPoints:colors:start: i64 [
    rerun:archetype:example.MyPoints
    rerun:component:example.MyPoints:colors
    rerun:component_descriptor:example.MyPoints:colors
    rerun:component_type:example.MyColor
    rerun:index:frame_nr
    rerun:index_kind:sequence
    rerun:index_marker:start
]
frame_nr:example_MyPoints:points:end: i64 [
    rerun:archetype:example.MyPoints
    rerun:component:example.MyPoints:points
    rerun:component_descriptor:example.MyPoints:points
    rerun:component_type:example.MyPoint
    rerun:index:frame_nr
    rerun:index_kind:sequence
    rerun:index_marker:end
]
frame_nr:example_MyPoints:points:has_data: bool [
    rerun:archetype:example.MyPoints
    rerun:component:example.MyPoints:points
    rerun:component_descriptor:example.MyPoints:points
    rerun:component_type:example.MyPoint
    rerun:index:frame_nr
    rerun:index_kind:sequence
    rerun:index_marker:has_data
]
frame_nr:example_MyPoints:points:start: i64 [
    rerun:archetype:example.MyPoints
    rerun:component:example.MyPoints:points
    rerun:component_descriptor:example.MyPoints:points
    rerun:component_type:example.MyPoint
    rerun:index:frame_nr
    rerun:index_kind:sequence
    rerun:index_marker:start
]
frame_nr:start: i64 [
    rerun:index:frame_nr
    rerun:index_kind:sequence
    rerun:index_marker:start
]
static:example_MyPoints:colors:has_data: bool [
    rerun:archetype:example.MyPoints
    rerun:component:example.MyPoints:colors
    rerun:component_descriptor:example.MyPoints:colors
    rerun:component_type:example.MyColor
    rerun:index:static
]
static:example_MyPoints:labels:has_data: bool [
    rerun:archetype:example.MyPoints
    rerun:component:example.MyPoints:labels
    rerun:component_descriptor:example.MyPoints:labels
    rerun:component_type:example.MyLabel
    rerun:index:static
]
static:example_MyPoints:points:has_data: bool [
    rerun:archetype:example.MyPoints
    rerun:component:example.MyPoints:points
    rerun:component_descriptor:example.MyPoints:points
    rerun:component_type:example.MyPoint
    rerun:index:static
]
